--- a/index.html
+++ b/index.html
@@ -19,20 +19,18 @@
               <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <img src="src/LOGO WHITE_1721043934.webp" width="200" height =auto>
               </a>
-        
               <ul class="nav nav-pills d-flex align-items-center">
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+                <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
               </ul>
             </header>
           </div>
     </header>
     <main class="px-3">
-
-      <!--Bootsrap5 Carousel-->
+<!--Bootsrap5 Carousel-->
       <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -84,34 +82,76 @@
           <p class="text-white">Designed by Sebastian Kirkland, a seasoned professional with over 25 years of expertise in design and manufacturing, these firepits reflect a perfect blend of innovation and craftsmanship. Their flat-pack design ensures effortless portability, making them ideal for camping, braais, or relaxing evenings under the stars.</p>        
           <p class="text-white"> Whether you're creating warmth at home or on the go, Boma Firepits deliver functionality, durability, and timeless style to every occasion.</p>
       </div>
-      <!--Bootstrap 5 Featurette-->
-      <hr class="featurette-divider">
-
+<!--Bootstrap 5 Featurette-->
       <div class="row featurette px-5 container">
         <div class="col-md-7 order-md-2 align-items-center">
           <h1 class="py-5 text-white">Adventure-Ready Warmth.</h1>
-          <p class="text-white">Discover the versatility of Boma fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
-          <p class="text-white">Built with durable, flat-packable carbon steel, these firepits are lightweight, portable, and easy to assemble, making them your perfect companion for camping, braais, social gatherings, or unwinding after a long day. With precision laser-cut designs, they combine functionality and style to create warmth and ambiance wherever life takes you</p>
+          <p>Discover the versatility of Boma fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
+          <p>Built with durable, flat-packable carbon steel, these firepits are lightweight, portable, and easy to assemble, making them your perfect companion for camping, braais, social gatherings, or unwinding after a long day. With precision laser-cut designs, they combine functionality and style to create warmth and ambiance wherever life takes you</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img src ="src/2024-07-15_14-05-37_1721045167.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
         </div>
       </div>
 
-      <div class="row featurette">
-        <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-          <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+      <div class="row featurette px-5 py-5 container">
+        <div class="col-md-7 order-md-2 align-items-center">
+          <h2 class="py-5 text-white">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
+          <p>And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
         </div>
         <div class="col-md-5">
           <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
         </div>
       </div>
 
+<!--Products offering-->
+      <div class="container px-4 py-5" id="hanging-icons">
+        <h2 class="pb-2 border-bottom text-white">Products</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+            </div>
+            <div>
+              <h3 class="text-white">Boma Pit Only</h3>
+              <img src ="src/s792920539730798088_p2_i1_w2992.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <p>Purchase our flagship product on it's own.</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start text-white">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+            </div>
+            <div>
+              <h3 class="text-white">Boma Pit And Grill</h3>
+              <img src ="src/s792920539730798088_p1_i3_w2000.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <p>The full package of out featured pit and grill.</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+            </div>
+            <div>
+              <h3 class="text-white">Grill Only</h3>
+              <img src ="src/s792920539730798088_p3_i1_w1868.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <p>Purchase the grill on it's own.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+<!--Contact information-->
+      <div class="row featurette px-5 container">
+        <div class="col-md-7 align-items-center">
+          <h2 class="py-5 text-white">Contact us!</h2>
+          <p>We would love to hear from you whether it's an enquiry,issue to raise or even just to let us know your experience with our product.</p>
+          <p><a href="mailto:someone@example.com" class ="text-white">Send email</a></p>
+        </div>
+        <div class="col-md-5">
+          <img src ="src/LOGO WHITE_1721043934.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
+      </div>
       </main>
+<!--Footer-->
       <footer class="container mt-auto text-white-50">
         <p>© Boma 2025. All Rights Reserved.</p>
-          <small>Designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution of is prohibited.</small>
+          <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution of is prohibited.</small>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
