--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Boma Firepit</title>
+    <title>skBOMA  Firepit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -77,16 +78,16 @@
       </div>
 
       <div class="row container py-5 px-5 ">
-        <h1 class="py-5 text-white">Boma Firepits.</h1>
-          <p class="text-white">At Boma Firepits, we specialize in crafting portable, durable, and stylish fire solutions that enhance any space or adventure. Inspired by the essence of social gatherings and the beauty of the outdoors, our firepits are built with precision and care using high-quality carbon steel.</p>
+        <h1 class="py-5 text-white">skBoma Firepits.</h1>
+          <p class="text-white">At skBoma Firepits, we specialize in crafting portable, durable, and stylish fire solutions that enhance any space or adventure. Inspired by the essence of social gatherings and the beauty of the outdoors, our firepits are built with precision and care using high-quality carbon steel.</p>
           <p class="text-white">Designed by Sebastian Kirkland, a seasoned professional with over 25 years of expertise in design and manufacturing, these firepits reflect a perfect blend of innovation and craftsmanship. Their flat-pack design ensures effortless portability, making them ideal for camping, braais, or relaxing evenings under the stars.</p>        
-          <p class="text-white"> Whether you're creating warmth at home or on the go, Boma Firepits deliver functionality, durability, and timeless style to every occasion.</p>
+          <p class="text-white"> Whether you're creating warmth at home or on the go, skBOMA  Firepits deliver functionality, durability, and timeless style to every occasion.</p>
       </div>
 <!--Bootstrap 5 Featurette-->
       <div class="row featurette px-5 container">
         <div class="col-md-7 order-md-2 align-items-center">
           <h1 class="py-5 text-white">Adventure-Ready Warmth.</h1>
-          <p>Discover the versatility of Boma fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
+          <p>Discover the versatility of skBOMA  fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
           <p>Built with durable, flat-packable carbon steel, these firepits are lightweight, portable, and easy to assemble, making them your perfect companion for camping, braais, social gatherings, or unwinding after a long day. With precision laser-cut designs, they combine functionality and style to create warmth and ambiance wherever life takes you</p>
         </div>
         <div class="col-md-5 order-md-1">
@@ -112,7 +113,7 @@
             <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
             </div>
             <div>
-              <h3 class="text-white">Boma Pit Only</h3>
+              <h3 class="text-white">skBOMA  Pit Only</h3>
               <img src ="src/s792920539730798088_p2_i1_w2992.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
               <p>Purchase our flagship product on it's own.</p>
             </div>
@@ -121,7 +122,7 @@
             <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
             </div>
             <div>
-              <h3 class="text-white">Boma Pit And Grill</h3>
+              <h3 class="text-white">skBOMA  Pit And Grill</h3>
               <img src ="src/s792920539730798088_p1_i3_w2000.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
               <p>The full package of out featured pit and grill.</p>
             </div>
@@ -150,8 +151,8 @@
       </main>
 <!--Footer-->
       <footer class="container mt-auto text-white-50">
-        <p>© Boma 2025. All Rights Reserved.</p>
-          <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution of is prohibited.</small>
+        <p>© skBOMA  2025. All Rights Reserved.</p>
+        <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution of is prohibited.</small>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
