--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+                <li class="nav-item"><a href="Assembly.html" class="nav-link">Assembly</a></li>
                 <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
               </ul>
@@ -91,7 +92,7 @@
           <p>Built with durable, flat-packable carbon steel, these firepits are lightweight, portable, and easy to assemble, making them your perfect companion for camping, braais, social gatherings, or unwinding after a long day. With precision laser-cut designs, they combine functionality and style to create warmth and ambiance wherever life takes you</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src ="src/2024-07-15_14-05-37_1721045167.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+          <img src ="src/BUSHLODGE1.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
         </div>
       </div>
 
@@ -101,8 +102,7 @@
           <p>And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
         </div>
         <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
-        </div>
+          <img src ="src/HOUSE2.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
       </div>
 
 <!--Products offering-->
@@ -114,7 +114,7 @@
             </div>
             <div>
               <h3 class="text-white">skBOMA  Pit Only</h3>
-              <img src ="src/s792920539730798088_p2_i1_w2992.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <img src ="src/5.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
               <p>Purchase our flagship product on it's own.</p>
             </div>
           </div>
@@ -123,7 +123,7 @@
             </div>
             <div>
               <h3 class="text-white">skBOMA  Pit And Grill</h3>
-              <img src ="src/s792920539730798088_p1_i3_w2000.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <img src ="src/8.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
               <p>The full package of out featured pit and grill.</p>
             </div>
           </div>
@@ -132,7 +132,7 @@
             </div>
             <div>
               <h3 class="text-white">Grill Only</h3>
-              <img src ="src/s792920539730798088_p3_i1_w1868.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
+              <img src ="src/grill2.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
               <p>Purchase the grill on it's own.</p>
             </div>
           </div>
