--- a/Assembly.html
+++ b/Assembly.html
@@ -21,12 +21,12 @@
                 <img src="src/LOGO WHITE_1721043934.webp" width="200" height =auto>
               </a>
               <ul class="nav nav-pills d-flex align-items-center">
-                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-                <li class="nav-item"><a href="Assembly.html" class="nav-link active" aria-current="page">Assembly</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="index.html#About" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="index.html#Products" class="nav-link">Products</a></li>
+                <li class="nav-item"><a href="Assembly.html" class="nav-link">Assembly</a></li>
                 <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="index.html#Contact" class="nav-link">Contact</a></li>
               </ul>
             </header>
           </div>
@@ -78,7 +78,7 @@
         </button>
       </div>
 
-      <div class="row container py-5 px-5 ">
+      <div class="row  px-5 ">
         <h1 class="py-5 text-white">skBOMA maintenance:</h1>
         <h4 class = "text-white py-3">A printable PDF version can be downloaded <a href = "src/skBoma_AssemblyandMaintenance.pdf">here.</a></h4>
           <h3 class="text-white">You have two options for maintaining your skBOMA:</h3>
