--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <img src="src/LOGO WHITE_1721043934.webp" width="200" height =auto>
               </a>
               <ul class="nav nav-pills d-flex align-items-center">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="index.html#About" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="index.html#Products" class="nav-link">Products</a></li>
                 <li class="nav-item"><a href="Assembly.html" class="nav-link">Assembly</a></li>
                 <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="index.html#Contact" class="nav-link">Contact</a></li>
               </ul>
             </header>
           </div>
@@ -78,16 +78,16 @@
         </button>
       </div>
 
-      <div class="row container py-5 px-5 ">
-        <h1 class="py-5 text-white">skBoma Firepits.</h1>
+      <div class="row container pb-5 px-5" id="About">
+        <h1 class="py-1 text-white">skBoma Firepits.</h1>
           <p class="text-white">At skBoma Firepits, we specialize in crafting portable, durable, and stylish fire solutions that enhance any space or adventure. Inspired by the essence of social gatherings and the beauty of the outdoors, our firepits are built with precision and care using high-quality carbon steel.</p>
           <p class="text-white">Designed by Sebastian Kirkland, a seasoned professional with over 25 years of expertise in design and manufacturing, these firepits reflect a perfect blend of innovation and craftsmanship. Their flat-pack design ensures effortless portability, making them ideal for camping, braais, or relaxing evenings under the stars.</p>        
           <p class="text-white"> Whether you're creating warmth at home or on the go, skBOMA  Firepits deliver functionality, durability, and timeless style to every occasion.</p>
       </div>
 <!--Bootstrap 5 Featurette-->
-      <div class="row featurette px-5 container">
+      <div class="row featurette px-5">
         <div class="col-md-7 order-md-2 align-items-center">
-          <h1 class="py-5 text-white">Adventure-Ready Warmth.</h1>
+          <h1 class="py-1 text-white">Adventure-Ready Warmth.</h1>
           <p>Discover the versatility of skBOMA  fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
           <p>Built with durable, flat-packable carbon steel, these firepits are lightweight, portable, and easy to assemble, making them your perfect companion for camping, braais, social gatherings, or unwinding after a long day. With precision laser-cut designs, they combine functionality and style to create warmth and ambiance wherever life takes you</p>
         </div>
@@ -96,9 +96,9 @@
         </div>
       </div>
 
-      <div class="row featurette px-5 py-5 container">
+      <div class="row featurette px-5 py-5 ">
         <div class="col-md-7 order-md-2 align-items-center">
-          <h2 class="py-5 text-white">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
+          <h2 class="py-1 text-white">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
           <p>And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
         </div>
         <div class="col-md-5">
@@ -106,7 +106,7 @@
       </div>
 
 <!--Products offering-->
-      <div class="container px-4 py-5" id="hanging-icons">
+      <div class="container px-4 py-5" id="Products">
         <h2 class="pb-2 border-bottom text-white">Products</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
@@ -139,18 +139,18 @@
         </div>
       </div>
 <!--Contact information-->
-      <div class="row featurette px-5 container">
+      <div class="row featurette px-5">
         <div class="col-md-7 align-items-center">
           <h2 class="py-5 text-white">Contact us!</h2>
           <p>We would love to hear from you whether it's an enquiry,issue to raise or even just to let us know your experience with our product.</p>
           <p><a href="mailto:someone@example.com" class ="text-white">Send email</a></p>
         </div>
         <div class="col-md-5">
-          <img src ="src/LOGO WHITE_1721043934.webp" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
+          <img src ="src/LOGOWHITE2.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
       </div>
       </main>
 <!--Footer-->
-      <footer class="container mt-auto text-white-50">
+      <footer class="container mt-auto text-white-50" id="Contact">
         <p>© skBOMA  2025. All Rights Reserved.</p>
         <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution of is prohibited.</small>
       </footer>
