--- a/FAQ.html
+++ b/FAQ.html
@@ -14,24 +14,25 @@
   <body>
     <div class="container"></div>
     <header>
-      <div class="container ">
+      <div class="container">
           <header class="header_area d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
               <img src="src/LOGO WHITE_1721043934.webp" width="200" height =auto>
             </a>
             <ul class="nav nav-pills d-flex align-items-center">
-              <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-              <li class="nav-item"><a href="FAQ.html"  class="nav-link active" aria-current="page">FAQs</a></li>
-              <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+              <li class="nav-item"><a href="index.html#About" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="index.html#Products" class="nav-link">Products</a></li>
+              <li class="nav-item"><a href="Assembly.html" class="nav-link">Assembly</a></li>
+              <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
+              <li class="nav-item"><a href="index.html#Contact" class="nav-link">Contact</a></li>
             </ul>
           </header>
         </div>
   </header>
 
   <main class="px-3">
-    <div class="row container py-5 px-5 ">
+    <div class="row px-5 ">
       <h1 class="py-5 text-white">Frequently Asked Questions.</h1>
       <h3>Below is a list of our most frequently asked questions.</h3>
       <ul>
