--- a/Assembly.html
+++ b/Assembly.html
@@ -21,10 +21,10 @@
                 <img src="src/LOGO WHITE_1721043934.webp" width="200" height =auto>
               </a>
               <ul class="nav nav-pills d-flex align-items-center">
-                <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="index.html#About" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="index.html#Products" class="nav-link">Products</a></li>
-                <li class="nav-item"><a href="Assembly.html" class="nav-link">Assembly</a></li>
+                <li class="nav-item"><a href="Assembly.html" class="nav-link active">Assembly</a></li>
                 <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
                 <li class="nav-item"><a href="index.html#Contact" class="nav-link">Contact</a></li>
               </ul>
