--- a/index.html
+++ b/index.html
@@ -79,17 +79,19 @@
       </div>
 
       <div class="row container pb-5 px-5" id="About">
-        <h1 class="py-1 text-white">skBoma Firepits.</h1>
-          <p class="text-white">At skBoma Firepits, we specialize in crafting portable, durable, and stylish fire solutions that enhance any space or adventure. Inspired by the essence of social gatherings and the beauty of the outdoors, our firepits are built with precision and care using high-quality carbon steel.</p>
-          <p class="text-white">Designed by Sebastian Kirkland, a seasoned professional with over 25 years of expertise in design and manufacturing, these firepits reflect a perfect blend of innovation and craftsmanship. Their flat-pack design ensures effortless portability, making them ideal for camping, braais, or relaxing evenings under the stars.</p>        
-          <p class="text-white"> Whether you're creating warmth at home or on the go, skBOMA  Firepits deliver functionality, durability, and timeless style to every occasion.</p>
+        <h1 class="py-1 text-white">skBOMA Firepits.</h1>
+          <p class="text-white">At skBoma Firepits, we specialize in crafting durable, portable, and stylish fire solutions that enhance any space or adventure. Inspired by the essence of social gatherings and the beauty of the outdoors, our firepits are built with precision and care using high-quality carbon steel.</p>
+          <p class="text-white">Designed by Sebastian Kirkland, a renowned industrial designer and Co-founder of User Design International, these firepits reflect a perfect blend of innovation and craftsmanship. With over 25 years of expertise in design and manufacturing, Sebastian has collaborated with some of South Africa's leading interior and architectural design houses. His achievements include winning the 2010 Design Indaba Best Product Award and securing a major contract with SAB as a Creative Director for Point of Sale. Additionally, his designs have been internationally patented, showcasing his commitment to excellence and innovation.</p>        
+          <p class="text-white">This larger-than-most fire pit on the market has the unique ability to flat pack for mobility while still remaining aesthetically pure to form, making it ideal for camping, braais, or relaxing evenings under the stars. Whether you're creating warmth at home or on the go, skBOMA Firepits deliver functionality, durability, and timeless style to every occasion.</p>
       </div>
 <!--Bootstrap 5 Featurette-->
       <div class="row featurette px-5">
         <div class="col-md-7 order-md-2 align-items-center">
           <h1 class="py-1 text-white">Adventure-Ready Warmth.</h1>
-          <p>Discover the versatility of skBOMA  fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
-          <p>Built with durable, flat-packable carbon steel, these firepits are lightweight, portable, and easy to assemble, making them your perfect companion for camping, braais, social gatherings, or unwinding after a long day. With precision laser-cut designs, they combine functionality and style to create warmth and ambiance wherever life takes you</p>
+          <p>Discover the versatility of skBOMA fireplaces—designed for any setting, from your backyard to the great outdoors.</p>
+          <p>Built with durable, flat-packable carbon steel, these firepits are lightweight, portable, and easy to assemble, making them your perfect companion for camping, braais, social gatherings, or unwinding after a long day. With precision laser-cut designs, they combine functionality and style to create warmth and ambiance wherever life takes you.</p>
+          <p>Choose between a clean, contemporary industrial carbon finish or a warm, standout rust patina to suit all lifestyle adventures. For those seeking a premium option, a solid stainless steel version is available—please enquire for more details.</p>
+          <p>Additionally, our firepits feature a grill functionality, allowing you to cook outdoors and inspire friends and family with delicious meals.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img src ="src/BUSHLODGE1.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
@@ -99,7 +101,7 @@
       <div class="row featurette px-5 py-5 ">
         <div class="col-md-7 order-md-2 align-items-center">
           <h2 class="py-1 text-white">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
-          <p>And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+          <p>When it comes to styling a home with standout features, the skBOMA firepit is a must-have for any dwelling with a cherished outdoor space. Its clean, bold design commands attention, enhancing the area and creating a warm, homely atmosphere with a heightened sense of style. The thick, long-lasting steel construction not only ensures durability but also serves as a striking design element that every stylish abode should feature. With skBOMA, your outdoor space will feel complete, inviting, and elegantly refined.</p>
         </div>
         <div class="col-md-5">
           <img src ="src/HOUSE2.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
@@ -115,7 +117,7 @@
             <div>
               <h3 class="text-white">skBOMA  Pit Only</h3>
               <img src ="src/5.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
-              <p>Purchase our flagship product on it's own.</p>
+              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a> to purchase the skBOMA on its own.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start text-white">
@@ -124,7 +126,7 @@
             <div>
               <h3 class="text-white">skBOMA  Pit And Grill</h3>
               <img src ="src/8.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
-              <p>The full package of out featured pit and grill.</p>
+              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a> to purchase the skBOMA & Grill Combo.</p>
             </div>
           </div>
           <div class="col d-flex align-items-start">
@@ -133,7 +135,7 @@
             <div>
               <h3 class="text-white">Grill Only</h3>
               <img src ="src/grill2.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
-              <p>Purchase the grill on it's own.</p>
+              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a>to purchase the Grill on it's own.</p>
             </div>
           </div>
         </div>
@@ -143,7 +145,7 @@
         <div class="col-md-7 align-items-center">
           <h2 class="py-5 text-white">Contact us!</h2>
           <p>We would love to hear from you whether it's an enquiry,issue to raise or even just to let us know your experience with our product.</p>
-          <p><a href="mailto:someone@example.com" class ="text-white">Send email</a></p>
+          <p><a href="info@skboma.com" class ="text-white">Send email</a></p>
         </div>
         <div class="col-md-5">
           <img src ="src/LOGOWHITE2.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
