--- a/Assembly.html
+++ b/Assembly.html
@@ -83,7 +83,7 @@
         <h4 class = "text-white py-3">A printable PDF version can be downloaded <a href = "src/skBoma_AssemblyandMaintenance.pdf">here.</a></h4>
           <h3 class="text-white">You have two options for maintaining your skBOMA:</h3>
           <p class="text-white">1. Rust Patina Look: If you prefer the rustic, weathered appearance, allow the skBOMA to rust naturally. Exposure to water will create a rust patina all around the skBOMA.</p>        
-          <p class="text-white"> 2. Preventing Rust to keep Carbon Steel finish: If you prefer to avoid the rust look, follow these steps: Weekly Maintenance:  Clean and oil the skBOMA with boiled linseed oil using a rag. After Each Use: After every fire, ensure the skBOMA is cleaned and oiled to maintain its condition and prevent rust.</p>
+          <p class="text-white"> 2. Preventing Rust to keep Carbon Steel finish: If you prefer to avoid the rust look, follow these steps: Weekly Maintenance:  Clean and oil the skBOMA with hot boiled linseed oil available from most hardware stores using a rag. After Each Use: After every fire, ensure the skBOMA is cleaned and oiled to maintain its condition and prevent rust.</p>
           <h3 class="text-white">The Grill maintenance:</h3>
           <p class="text-white">Grill Maintenance (if applicable): If your skBOMA includes a grill, wipe it down weekly with vegetable oil, preferably
             olive oil. This will prevent rust and help retain the grill's black appearance. Once the black appearance forms you can wipe it down with oil, as and when it becomes too dry or starts to form rust, which will need less maintenance than its initial weekly maintenance.  </p>        
