--- a/index.html
+++ b/index.html
@@ -6,32 +6,33 @@
     <title>skBOMA  Firepit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <div class="container"></div>
-    <header>
-        <div class="container ">
-            <header class="header_area d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-              <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <img src="src/LOGO WHITE_1721043934.webp" width="200" height =auto>
-              </a>
-              <ul class="nav nav-pills d-flex align-items-center">
-                <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="index.html#About" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="index.html#Products" class="nav-link">Products</a></li>
-                <li class="nav-item"><a href="Assembly.html" class="nav-link">Assembly</a></li>
-                <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
-                <li class="nav-item"><a href="index.html#Contact" class="nav-link">Contact</a></li>
-              </ul>
-            </header>
+    <header class="header_area d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <nav class="navbar navbar-expand-sm navbar-dark">
+          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="src/LOGO WHITE_1721043934.webp" width="200" height ="auto" alt="skBOMA Logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav nav nav-pills d-flex align-items-center">
+              <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+              <li class="nav-item"><a href="index.html#About" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="index.html#Products" class="nav-link">Products</a></li>
+              <li class="nav-item"><a href="Assembly.html" class="nav-link">Assembly</a></li>
+              <li class="nav-item"><a href="FAQ.html" class="nav-link">FAQs</a></li>
+              <li class="nav-item"><a href="index.html#Contact" class="nav-link">Contact</a></li>
+            </ul>
           </div>
+      </nav>
     </header>
-    <main class="px-3">
+    <main class="main px-3">
 <!--Bootsrap5 Carousel-->
       <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
         <div class="carousel-indicators">
