--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container"></div>
-    <header class="header_area d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <header class="header_area d-flex flex-wrap justify-content-center py-3 mb-4 ">
       <nav class="navbar navbar-expand-sm navbar-dark">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <img src="src/LOGO WHITE_1721043934.webp" width="200" height ="auto" alt="skBOMA Logo">
@@ -101,7 +101,7 @@
 
       <div class="row featurette px-5 py-5 ">
         <div class="col-md-7 order-md-2 align-items-center">
-          <h2 class="py-1 text-white">And lastly, this one. <span class="text-body-secondary">Checkmate.</span></h2>
+          <h2 class="py-1 text-white">Elevate Your Outdoor Space with skBOMA<span class="text-body-secondary"></span></h2>
           <p>When it comes to styling a home with standout features, the skBOMA firepit is a must-have for any dwelling with a cherished outdoor space. Its clean, bold design commands attention, enhancing the area and creating a warm, homely atmosphere with a heightened sense of style. The thick, long-lasting steel construction not only ensures durability but also serves as a striking design element that every stylish abode should feature. With skBOMA, your outdoor space will feel complete, inviting, and elegantly refined.</p>
         </div>
         <div class="col-md-5">
@@ -109,7 +109,7 @@
       </div>
 
 <!--Products offering-->
-      <div class="container px-4 py-5" id="Products">
+      <div class="container px-4 py-3" id="Products">
         <h2 class="pb-2 border-bottom text-white">Products</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
@@ -136,7 +136,7 @@
             <div>
               <h3 class="text-white">Grill Only</h3>
               <img src ="src/grill2.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300">
-              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a>to purchase the Grill on it's own.</p>
+              <p>Enquire at <a href="mailto:info@skboma.com">info@skboma.com</a>to purchase the Grill on its own.</p>
             </div>
           </div>
         </div>
@@ -145,17 +145,17 @@
       <div class="row featurette px-5">
         <div class="col-md-7 align-items-center">
           <h2 class="py-5 text-white">Contact us!</h2>
-          <p>We would love to hear from you whether it's an enquiry,issue to raise or even just to let us know your experience with our product.</p>
+          <p>We would love to hear from you whether it's an enquiry, issue to raise or even just to let us know your experience with our product.</p>
           <p><a href="info@skboma.com" class ="text-white">Send email</a></p>
         </div>
-        <div class="col-md-5">
-          <img src ="src/LOGOWHITE2.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">        </div>
+        <div class="col-md-5 footer-logo">
+          <img src ="src/LOGOWHITE2.png" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="350" height="350">        </div>
       </div>
       </main>
 <!--Footer-->
       <footer class="container mt-auto text-white-50" id="Contact">
         <p>© skBOMA  2025. All Rights Reserved.</p>
-        <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution of is prohibited.</small>
+        <small>Website designed and crafted with care by Two Waves Multimedia. Unauthorized duplication or distribution is prohibited.</small>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
